--- a/semi-working chat/src/index.css
+++ b/semi-working chat/src/index.css
@@ -18,7 +18,6 @@
 #chat-page .chat-me .am-list-extra {
     flex-basis: auto;
 }
-
 #chat-page .chat-me .am-list-content {
     padding-right: 15px;
     text-align: right;
@@ -29,7 +28,8 @@
     flex-basis: auto;
 }
 .stick-footer {
-    position:fixed;
+    z-index:10;
+    position:absolute;
     bottom:0;
     width:100%;
 }
