--- a/semi-working chat/src/index.css
+++ b/semi-working chat/src/index.css
@@ -22,6 +22,9 @@
     padding-right: 15px;
     text-align: right;
 }
+#chat-page .am-grid-text {
+  margin-top:0;
+}
 .chat-me {
     padding-right: 15px !important;
     text-align: right !important;
